# rust-til

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  justfile
.claude/agents/: git-commit-handler.md  rust-code-evaluator.md  rust-code-generator.md
10_traits/: Cargo.toml  justfile
10_traits/src/: ex01_person_setup.rs  ex02_trait_bounds.rs  lib.rs  naming.rs  person.rs
11_pointers/: Cargo.toml  justfile
12_generics/: justfile
12_generics/src/: main.rs
13_pcmp/: Cargo.toml  justfile
13_pcmp/robot_core/: Cargo.toml
13_pcmp/robot_core/src/: ai.rs  error.rs  hello_robot.rs  lib.rs  motor.rs  sensor.rs
13_pcmp/src/: main.rs
14_asynchronous/: Cargo.toml  justfile
14_asynchronous/src/: ex01_block_on.rs  ex02_sequential_await.rs  ex03_return_future.rs  ex04_async_move.rs  ex05_spawn.rs  ex06_select.rs  ex07_interval.rs  (+11 more)
1_variables/: Cargo.toml  justfile
2_ownership/: Cargo.toml  justfile
3_functions/: Cargo.toml  justfile
4_structures/: Cargo.toml  justfile
5_enums/: Cargo.toml  justfile
6_collections/: Cargo.toml  justfile
7_optionals/: Cargo.toml  justfile
8_error_handling/: Cargo.toml  justfile
9_lifetimes/: Cargo.toml  justfile
asynchronous/: Cargo.toml
borrowing_reference/: Cargo.toml
inventory_system/: Cargo.toml  inventory.json
lecture_3/: Cargo.toml
lecture_4/: Cargo.toml
pcmp/: Cargo.toml
project_inventory_system/: Cargo.toml  README.md  inventory.json  justfile
project_inventory_system/src/: lib.rs  main.rs
project_manufacturers/: Cargo.toml  README.md  justfile
project_manufacturers/src/: lib.rs  main.rs
project_notes/: .gitignore  Cargo.toml  My  README.md  justfile  notes.txt
project_robot_joint_pubsub/: .gitignore  Cargo.toml  README.md  build_mujoco_cpp.sh  justfile
project_robot_joint_pubsub/src/: lib.rs  main.rs
scripts/: install-justfile-prerequisites.sh  pre-commit-chapters-123.sh  pre-commit-rust.sh
tui_tut/: Cargo.toml
(+85 files in other folders)
