[package]
name = "project_inventory_system"
version = "0.1.0"
edition = "2024"
description = "Cursive TUI inventory app that persists products to a local JSON file."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
cursive = "0.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0"
