[package]
name = "project_robot_joint_pubsub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/bin/subscriber.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mujoco-rs = { version = "2.2.2", default-features = false, features = ["cpp-viewer", "renderer", "renderer-winit-fallback"] }
zlib-rs = "0.5.5"
